UI: Fix checkbox overflowing
Hid the overflow of the checkbox into it's parent container

--- a/web/src/components/layout/subscribe-newsletter.css
+++ b/web/src/components/layout/subscribe-newsletter.css
@@ -108,6 +108,7 @@
 
     & .checkbox-container {
         border-color: var(--white);
+        overflow: hidden;
 
         & path {
             fill: var(--white);
